# MonoOS

./: LICENSE.txt  README.md
apps/calculator/: CalcButton.qml  CalcEngine.qml  main.qml
apps/camera/: main.qml
apps/developer_tools/: PerfGraph.qml  main.qml
apps/files/: FileRow.qml  main.qml
apps/gallery/: AlbumCard.qml  PhotoThumbnail.qml  PhotoViewer.qml  main.qml
apps/settings/: main.qml
apps/terminal/: main.qml
assets/fonts/: README.md  fonts.conf
assets/icons/: README.md
assets/images/: README.md
assets/wallpapers/: README.md
boot/boot_manager/: Cargo.toml  boot_flags.rs  boot_manager.rs  boot_state.rs  kernel_selector.rs  partition_manager.rs  startup_profile.rs
boot/bootloader/: boot_args.c  boot_main.c  cpu_init.c  entry.S  initramfs_loader.c  kernel_loader.c  linker.ld  memory_map.c
boot/recovery/: Cargo.toml  backup_restore.rs  factory_reset.rs  partition_repair.rs  recovery_main.rs  sideload_manager.rs
boot/secure_boot/: Cargo.toml  boot_validator.rs  key_manager.rs  signature_verifier.rs  trust_store.rs
docs/: architecture.md  roadmap.md
drivers/audio/: Makefile  audio_driver.c
drivers/camera/: Makefile  camera_driver.c
drivers/display/: Makefile  display_driver.c
drivers/modem/: Makefile  modem_driver.c
drivers/sensors/: Makefile  sensors_driver.c
drivers/storage/: Makefile  storage_driver.c
drivers/touchscreen/: Makefile  touch_driver.c
framework/Nova pasta/: README.md
framework/accounts/: account_manager.rs
framework/application/: app_context.rs
framework/graphics/: render_engine.cpp
framework/multimedia/: media_session.rs
framework/notifications/: notification_manager.rs
framework/permissions/: kernel_bridge.rs  permission_manager.rs
framework/storage/: storage_manager.rs
hal/audio/: audio_hal.cpp
hal/bluetooth/: bluetooth_hal.cpp
hal/camera/: camera_hal.cpp
hal/display/: display_hal.cpp
hal/gps/: gps_hal.cpp
hal/power/: power_hal.cpp
hal/sensors/: sensors_hal.cpp
hal/wifi/: wifi_hal.cpp
init/early_init/: early_init.c
init/service_loader/: service_loader.cpp
init/startup_profiles/: normal.conf
kernel/: Makefile  monoos_lsm.mod.c  monoos_mm.mod.c  monoos_net.mod.c  monoos_power.mod.c  monoos_process.mod.c  monoos_sched.mod.c  monoos_syscalls.mod.c  monoos_vfs.mod.c
kernel/filesystem/: Makefile  vfs_overlay.c
kernel/include/: monoos_mm.h  monoos_net.h  monoos_power.h  monoos_process.h  monoos_sched.h
kernel/networking/: Makefile  netfilter_privacy.c
kernel/power/: Makefile  power_manager.c
kernel/security/: Makefile  lsm_monoos.c  lsm_oneos.c
multimedia/audio_framework/: Makefile  audio_engine.cpp
multimedia/camera_framework/: Makefile  camera_pipeline.cpp
multimedia/codecs/: codec_registry.rs
multimedia/graphics/: Makefile  vulkan_context.cpp
multimedia/media_playback/: media_player.rs
networking/captive_portal/: captive_portal.rs
networking/dns/: dns_resolver.rs
networking/firewall/: firewall.rs
networking/network_stack/: network_stack.rs
networking/vpn/: vpn_manager.rs
sdk/api/: monoos.h  monoos_audio.h  monoos_media.h  monoos_network.h  monoos_notifications.h  monoos_permissions.h  monoos_storage.h  monoos_ui.h  oneos.h  oneos_audio.h  oneos_media.h  oneos_network.h  oneos_notifications.h  oneos_permissions.h  oneos_storage.h
sdk/documentation/: api_reference.md  getting_started.md  security_guide.md
sdk/rust/: Cargo.toml
sdk/rust/src/: audio.rs  context.rs  lib.rs  media.rs  mock_runtime.rs  network.rs  notifications.rs  permissions.rs  result.rs  storage.rs  sys.rs  ui.rs
sdk/rust/tests/: sdk_tests.rs
sdk/templates/basic_app/: Cargo.toml
sdk/templates/basic_app/res/qml/: Main.qml
sdk/templates/basic_app/src/: main.rs
sdk/templates/media_player_app/: Cargo.toml
sdk/templates/media_player_app/res/qml/: PlayerUI.qml
sdk/templates/media_player_app/src/: main.rs
sdk/tools/: device_info.sh  monoos_sdk.py  oneos_sdk.py
security/: Cargo.toml  lib.rs
security/camera_monitor/: camera_monitor.rs
security/crypto/: Cargo.toml
security/crypto/src/: file_crypto.rs  keystore.rs  lib.rs  package_signing.rs
security/microphone_monitor/: microphone_monitor.rs
security/network_monitor/: network_monitor.rs
security/privacy_dashboard/: privacy_dashboard.rs
security/telemetry_guard/: telemetry_guard.rs
security/tracker_blocker/: tracker_blocker.rs
services/: Cargo.toml
services/account_service/: Cargo.toml  account_service.rs
services/account_service/src/: main.rs
services/app_service/: Cargo.toml
services/app_service/src/: lib.rs  main.rs
services/audio_service/: Cargo.toml  audio_service.rs
services/audio_service/src/: main.rs
services/bluetooth_service/: Cargo.toml  bluetooth_service.rs
services/bluetooth_service/src/: main.rs
services/camera_service/: Cargo.toml  camera_service.rs
services/camera_service/src/: main.rs
services/gps_service/: Cargo.toml  gps_service.rs
services/gps_service/src/: main.rs
services/network_service/: Cargo.toml
services/network_service/src/: lib.rs  main.rs
services/package_service/: Cargo.toml  package_service.rs
services/package_service/src/: main.rs
services/permission_service/: Cargo.toml  permission_service.rs
services/power_service/: power_service.rs
services/settings_service/: settings_service.rs
services/storage_service/: storage_service.rs
services/system_server/: system_server.rs
services/update_service/: update_service.rs
services/wifi_service/: wifi_service.rs
telephony/call_manager/: call_manager.rs
telephony/carrier_profiles/: carrier_profiles.rs
telephony/esim/: esim_manager.rs
telephony/modem_manager/: modem_manager.rs
telephony/sms_manager/: sms_manager.rs
testing/hardware/: Cargo.toml
testing/integration/: Cargo.toml
testing/kernel/: Makefile
testing/ui/: package.json  run_tests.js
testing/unit/: Cargo.toml
tools/debugging/: crash_reporter.rs  monoos_dumpsys.py  monoos_logcat.py  monoos_strace.sh
tools/diagnostics/: bugreport.py  (+2 more)
tools/profiling/: Cargo.toml  cpu_profiler.py  frame_timing.rs  memory_profiler.sh
(+91 files in other folders)
