[package]
name        = "monoos-security"
version     = "1.0.0"
edition     = "2021"
authors     = ["DudasCorp"]
description = "MonoOS privacy engine: tracker blocking, telemetry guarding, camera/microphone/network access monitoring, and the privacy dashboard"
license     = "SEE LICENSE IN ../LICENSE.txt"

[lib]
name = "monoos_security"
path = "lib.rs"

[dependencies]
monoos-crypto = { path = "crypto" }
