[package]
name        = "oneos-boot-manager"
version     = "1.0.0"
edition     = "2021"
authors     = ["DudasCorp"]
description = "OneOS A/B boot manager – Rust layer called by the C bootloader"
license     = "SEE LICENSE IN ../../LICENSE.txt"

[lib]
name       = "oneos_boot_manager"
crate-type = ["staticlib", "rlib"]

[dependencies]
# Fixed-capacity collections without heap allocation (no_std compatible).
heapless  = { version = "0.8",  default-features = false }
bitflags  = { version = "2.4",  default-features = false }

[profile.release]
opt-level     = "z"    # Minimise binary size for bootloader
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.dev]
panic = "abort"

