[package]
name        = "monoos-boot-manager"
version     = "1.0.0"
edition     = "2021"
authors     = ["DudasCorp"]
description = "MonoOS A/B boot manager – Rust layer called by the C bootloader"
license     = "SEE LICENSE IN ../../LICENSE.txt"

[lib]
name       = "monoos_boot_manager"
path       = "boot_manager.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
# Fixed-capacity collections without heap allocation (no_std compatible).
heapless  = { version = "0.8",  default-features = false }
bitflags  = { version = "2.4",  default-features = false }

[features]
# Enabled by host-side test crates (see testing/unit/boot_manager_tests)
# so the crate can be built and unit tested with the standard library.
# Left disabled by default and NOT enabled by build_bootloader.sh, so the
# real freestanding bootloader build stays #![no_std].
std = []

[profile.release]
opt-level     = "z"    # Minimise binary size for bootloader
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

# Note: panic="abort" is intentionally NOT set for [profile.dev]. The real
# freestanding bootloader build (build/scripts/build_bootloader.sh) already
# forces it via `RUSTFLAGS="-C panic=abort"` for both --release and debug
# profiles when targeting x86_64-unknown-none. Leaving the default unwind
# panic strategy for [profile.dev] allows `cargo test` to run on the host
# (the std test harness relies on unwinding to catch test failures).
