[package]
name        = "monoos-recovery"
version     = "1.0.0"
edition     = "2021"
authors     = ["DudasCorp"]
description = "MonoOS recovery environment"
license     = "SEE LICENSE IN ../../LICENSE.txt"

[[bin]]
name = "recovery"
path = "recovery_main.rs"

[dependencies]
heapless = { version = "0.8", default-features = false }
bitflags = { version = "2.4", default-features = false }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
