[package]
name        = "oneos-secure-boot"
version     = "1.0.0"
edition     = "2021"
authors     = ["DudasCorp"]
description = "OneOS Verified Boot 2.0 implementation"
license     = "SEE LICENSE IN ../../LICENSE.txt"

[lib]
name       = "oneos_secure_boot"
crate-type = ["staticlib", "rlib"]

[dependencies]
heapless = { version = "0.8", default-features = false }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.dev]
panic = "abort"
