[package]
name        = "monoos-sdk"
version     = "1.0.0"
edition     = "2021"
authors     = ["DudasCorp"]
description = "MonoOS application SDK — safe Rust bindings over the MonoOS C ABI (sdk/api/*.h)"
license     = "SEE LICENSE IN ../../LICENSE.txt"

[lib]
name = "monoos_sdk"
path = "src/lib.rs"

[dependencies]

[features]
# The real C symbols (monoos_context_create, etc.) are provided at runtime by
# libmonoos_runtime.so on-device — apps link against them but never define
# them. For host-side `cargo test`/`cargo doc` without that runtime present,
# the "mock-runtime" feature compiles in a minimal Rust implementation of
# the same symbols so the safe wrappers can be exercised directly.
mock-runtime = []
